# SimpleGame

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
shaders/: CMakeLists.txt  compile_flags.txt  general.metal  shadow.metal  skybox.metal  textured.metal  triangle.metal
src/: CMakeLists.txt  auto_release.hpp  camera.hpp  cube_map.cpp  cube_map.hpp  entity.hpp  error.h  error.hpp  exception.cpp  exception.hpp  light.hpp  main.cpp  material.hpp  matrix4.cpp  matrix4.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  opengl.hpp  renderer.cpp  renderer.hpp  resource_reader.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  utils.hpp  vector3.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  matrix_test.cpp  vector3_test.cpp
